# cargo_patch_subdep

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
src/: cargo_core.rs  conf.rs  deps.rs  io.rs  lib.rs  load_src.rs  manifest.rs  patch.rs  util.rs
test_resources/project_err_with_dif_dep_versions/: Cargo.toml
test_resources/project_err_with_dif_dep_versions/account_web/: Cargo.toml
test_resources/project_err_with_dif_dep_versions/module_1/: Cargo.toml
test_resources/project_err_with_dif_dep_versions/module_2/: Cargo.toml
test_resources/project_ok_1/: Cargo.toml
test_resources/project_ok_1/account_web/: Cargo.toml
test_resources/project_ok_1/module_1/: Cargo.toml
test_resources/project_ok_1/module_2/: Cargo.toml
test_resources/project_ok_1_OLD/: Cargo.toml
test_resources/project_ok_1_OLD/account_web/: Cargo.toml
test_resources/project_ok_1_OLD/module_1/: Cargo.toml
test_resources/project_ok_1_OLD/module_2/: Cargo.toml
test_resources/project_ok_1_OLD_2018/: Cargo.toml
test_resources/project_ok_1_OLD_2018/account_web/: Cargo.toml
test_resources/project_ok_1_OLD_2018/module_1/: Cargo.toml
test_resources/project_ok_1_OLD_2018/module_2/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/index.crates.io-bal-bla/progenitor-0.7.0/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/index.crates.io-bal-bla/progenitor-client-0.7.0/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/index.crates.io-bal-bla/progenitor-impl-0.7.0/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/index.crates.io-bal-bla/progenitor-macro-0.7.0/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/progenitor_git/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/progenitor_git/example-build/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/progenitor_git/example-macro/: Cargo.toml
test_resources/project_ok_real_case_deps_to_path/progenitor_git/example-wasm/: Cargo.toml
test_resources/project_workspace_with_member_patch_conf/: Cargo.toml
test_resources/project_workspace_with_member_patch_conf/account_web/: Cargo.toml
test_resources/project_workspace_with_member_patch_conf/account_web/src/: lib.rs
test_resources/project_workspace_with_root_patch_conf/: Cargo.toml
tests/: conf_test.rs  deps_test.rs  override_subdeps_test.rs  patch_test.rs  real_test.rs
