[package]
name = "mvv_cargo_patch_subdep_ver"
version = "0.1.0"
edition = "2021"

description = "Cargo Subcommand for patching sub-dependencies versions"
license = "Apache-2.0"
readme = "README.md"
keywords = [ "cargo", "patch", "dependency", "dependencies" , "sub-dependency" ]
categories = ["command-line-utilities"]
repository = "https://github.com/odisseylm/cargo_patch_subdep"


[workspace]
# To avoid problem with putting it in subdir (like 'thirdparty', 'temp') of other project


[lints.rust]
# Features are not used there because in general 'features' are considered ass additive
# and some build tools enables all features at the same time, what is not acceptable for this case.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(cargo_core_ver_prefix, values("05x", "06x", "07x", "075x", "076x", "079x", "08x", "082x", "09x", "010x", "011x", "012x", "013x", "014x", "015x", "1_0x", "1_1x", "1_2x", "1_3x", "1_4x", "1_5x"))'
] }


[build-dependencies]
# cargo-metadata is not compatible with 'cargo' 0.78.*
#cargo_metadata = "0.18.1" # "0.18.1" # T O D O: temp, try to avoid it
cargo_toml = "0.20.4" # "0.20.4"
toml = "0.8.16" # "0.8.16"

#version_check = "0.9.5"
rustc_version = "0.4.1"

[dependencies]
# It was used as idea.
#cargo-patch = "0.3.2"

# TODO: Seems it is risky to use/depend on cargo crate directly
#       since it will may not work in the future.
#       Probably it would be better to call 'cargo' directly in some way. How?
#       I've already tired to fix sources after 'cargo' crate changes :-(
#       See https://docs.rs/cargo/latest/cargo/
#       WARNING: Using Cargo as a library has drawbacks, particularly the API is unstable,
#       and there is no clear path to stabilize it soon at the time of writing.
#       See The Cargo Book: External tools for more on this topic.
#
# Tested with 0.50.*, 0.59.0, 0.60.*, 0.69.1, 0.70.*, 0.75.1, 0.80.0, 0.81.0, 0.82.0
cargo = "0.79.0"  # "0.80.*"

# Default/latest 0.17.7 is not compatible with rustc 1.79
orion = "=0.17.6"

# !!! 0.71.*, 0.72.*, 0.73.*, 0.74.*, 0.77.*, 0.78.* - broken => gix-xxx compile error !!!
# 0.76 0.79 => 07next

cargo_toml = "0.20.4" # "0.20.4"
toml = "0.8.16" # "0.8.16"
serde = "1.0.204"

if_chain = "1.0.2"
extension-trait = "1.0.2"

#semver = "*" # "1.0.23"
anyhow = "1.0.86"
fs_extra = "*" # "1.3.0"

env_logger = "0.11.5"
log = "0.4.22"
