[workspace]
members = [
    "account_web",
    "module_1",
    "module_2",
]
#resolver = "1"
resolver = "2"


# With changed reqwest from version 11 to 12. Otherwise project is not compiled :-(
[patch.crates-io]

[workspace.dependencies]
reqwest = "0.11.21"   # for test only


[workspace.metadata.patch-replace-sub-dependencies.progenitor-client]
replace = [
    { sub_dep = "reqwest", from_ver = "0.11", to_ver = "0.11.23" },
]
[workspace.metadata.patch-replace-sub-dependencies.progenitor-client-macro]
replace = [
    { sub_dep = "reqwest", from_ver = "0.11", to_ver = "0.11.23" },
]
