[package]
name = "mvv_account_web"
version = "0.1.0"
edition = "2021"


[features]


[build-dependencies]
progenitor = "0.7.0"
cargo-progenitor = "0.7.0"
openapiv3 = "2.0.0"
serde_json = "1.0.120"
syn = "2.0.72"
prettyplease = "0.2.20"


[dependencies]
# for generated code
futures = "0.3.30"
base64 = "0.22.1"
rand = "0.8.5"
regress = "0.10.0"

reqwest = { version = "0.12.5", features = ["default", "json", "stream"] }
url = "2.5.1"

sqlx = { version = "0.7.4", features = ["sqlite", "time", "runtime-tokio"] }
sqlx-postgres = { version = "0.7.4", features = ["bigdecimal", "chrono", "uuid"] }

progenitor = { version = "0.7.0", features = [] }
progenitor-client = { version = "0.7.0", features = [] }

[tests]


[dev-dependencies]
