[package]
name = "mvv_account_web"
version = "0.1.0"
edition = "2021"


[build-dependencies]
progenitor = "0.7.0"
cargo-progenitor = "0.7.0"


[dependencies]
reqwest = { version = "0.12.5", features = ["default", "json", "stream"] }
url = "2.5.1"

progenitor = { version = "0.7.0", features = [] }
progenitor-client = { version = "0.7.0", features = [] }


[dev-dependencies]
