
[build-dependencies]
progenitor = "0.7.0"
cargo-progenitor = "0.7.0"
openapiv3 = "2.0.0"
serde_json = "1.0.120"
syn = "2.0.72"
prettyplease = "0.2.20"


[dependencies]
reqwest = { version = "0.12.5", features = ["default", "json", "stream"] }


[dependencies.progenitor-client]
version = "0.7.1"
features = []


[dev-dependencies]
