
[build-dependencies]
progenitor = "0.7.0"
cargo-progenitor = "0.7.0"


[dependencies]
reqwest = { version = "0.12.5", features = ["default", "json", "stream"] }


[dependencies.progenitor-client]
version = "0.6.0"  # Some other version to fail (since it makes hell and not supported now for patching)
features = []


[dev-dependencies]
