[package]
name = "module_1"
edition = "2021"
version = "0.0.1"


[build-dependencies]
progenitor = "0.7.0"
cargo-progenitor = "0.7.0"


[dependencies]
reqwest = { version = "0.12.5", features = ["default", "json", "stream"] }


[dependencies.progenitor-client]
version = "0.7.0"
features = []


[dev-dependencies]
reqwest = { version = "0.11.20", features = ["default", "json", "stream"] }
