[package]
name = "module_1"
edition = "2018"
version = "0.0.1"


[build-dependencies]
progenitor = "0.2.0"


[dependencies]
reqwest = { version = "0.11.21", features = ["default", "json", "stream"] }


[dependencies.progenitor-client]
version = "0.2.0"
features = []


[dev-dependencies]
reqwest = { version = "0.11.20", features = ["default", "json", "stream"] }
